kubernetes/apps/dev/kubernetes-schemas/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-schemas
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes-schemas.toskbot.xyz`)
      kind: Rule
      services:
        - name: kubernetes-schemas
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-schemas-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: kubernetes-schemas.toskbot.xyz
